test_output_debug.txt

[1m[46m RUN [49m[22m [36mv4.0.16 [39m[90mC:/Users/hyper/workspace/borg[39m

[90mstdout[2m | packages/core/test/CoreInfra.test.ts
[22m[39m[MCPServer] Starting imports...
[MCPServer] Γ£ô @modelcontextprotocol/sdk
[MCPServer] Γ£ô path/url
[MCPServer] Γ£ô Router
[MCPServer] Γ£ô ModelSelector
[MCPServer] Γ£ô ws/http
[MCPServer] Γ£ô SkillRegistry
[MCPServer] Γ£ô All Tools & ChainExecutor
[MCPServer] Γ£ô Council
[MCPServer] Γ£ô PermissionManager
[MCPServer] All imports complete!

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute lsp_symbol_search
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_symbol_search
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute lsp_definition
[22m[39mRouter initialized

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute code_mode_execute
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_definition
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute code_mode_execute
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_switch
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_switch
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_stage
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_stage
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

[90mstdout[2m | packages/core/test/CoreInfra.test.ts[2m > [22m[2mCore Infrastructure Tools (Phase 20)[2m > [22m[2mshould execute plan_mode_status
[22m[39mRouter initialized

stderr | packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_status
[MCPServer] ≡ƒòÆ Scheduling Auto-Drive Start in 5s...

 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute lsp_symbol_search[32m 11[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: Too"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute lsp_definition[32m 2[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: Too"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute code_mode_execute[32m 2[2mms[22m[39m
[31m   ΓåÆ Unexpected token 'E', "Error: Too"... is not valid JSON[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_switch[32m 7[2mms[22m[39m
[31m   ΓåÆ expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Switched to BUILD mode'[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_stage[32m 3[2mms[22m[39m
[31m   ΓåÆ expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Staged changes for src/index.ts'[39m
 [31m├ù[39m packages/core/test/CoreInfra.test.ts[2m > [22mCore Infrastructure Tools (Phase 20)[2m > [22mshould execute plan_mode_status[32m 2[2mms[22m[39m
[31m   ΓåÆ expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Mode: PLAN'[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 6 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_symbol_search
SyntaxError: Unexpected token 'E', "Error: Too"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:143:30
    141|     it('should execute lsp_symbol_search', async () => {
    142|         const result = await server.executeTool('lsp_symbol_search', {ΓÇª
    143|         const content = JSON.parse(result.content[0].text);
       |                              ^
    144|         expect(content[0].name).toBe('TestSymbol');
    145|     });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute lsp_definition
SyntaxError: Unexpected token 'E', "Error: Too"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:149:30
    147|     it('should execute lsp_definition', async () => {
    148|         const result = await server.executeTool('lsp_definition', { fiΓÇª
    149|         const content = JSON.parse(result.content[0].text);
       |                              ^
    150|         expect(content.uri).toBe('file://def.ts');
    151|     });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute code_mode_execute
SyntaxError: Unexpected token 'E', "Error: Too"... is not valid JSON
 Γ¥» packages/core/test/CoreInfra.test.ts:155:30
    153|     it('should execute code_mode_execute', async () => {
    154|         const result = await server.executeTool('code_mode_execute', {ΓÇª
    155|         const content = JSON.parse(result.content[0].text);
       |                              ^
    156|         expect(content.success).toBe(true);
    157|         expect(content.result).toBe('Executed');

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_switch
AssertionError: expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Switched to BUILD mode'

Expected: "Switched to BUILD mode"
Received: "Error: Tool execution failed: Tool plan_mode_switch not found in any connected MCP server."

 Γ¥» packages/core/test/CoreInfra.test.ts:162:40
    160|     it('should execute plan_mode_switch', async () => {
    161|         const result = await server.executeTool('plan_mode_switch', { ΓÇª
    162|         expect(result.content[0].text).toContain('Switched to BUILD moΓÇª
       |                                        ^
    163|     });
    164| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[4/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_stage
AssertionError: expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Staged changes for src/index.ts'

Expected: "Staged changes for src/index.ts"
Received: "Error: Tool execution failed: Tool plan_mode_stage not found in any connected MCP server."

 Γ¥» packages/core/test/CoreInfra.test.ts:167:40
    165|     it('should execute plan_mode_stage', async () => {
    166|         const result = await server.executeTool('plan_mode_stage', { fΓÇª
    167|         expect(result.content[0].text).toContain('Staged changes for sΓÇª
       |                                        ^
    168|     });
    169| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[5/6]ΓÄ»

 FAIL  packages/core/test/CoreInfra.test.ts > Core Infrastructure Tools (Phase 20) > should execute plan_mode_status
AssertionError: expected 'Error: Tool execution failed: Tool plΓÇª' to contain 'Mode: PLAN'

Expected: "Mode: PLAN"
Received: "Error: Tool execution failed: Tool plan_mode_status not found in any connected MCP server."

 Γ¥» packages/core/test/CoreInfra.test.ts:172:40
    170|     it('should execute plan_mode_status', async () => {
    171|         const result = await server.executeTool('plan_mode_status', {}ΓÇª
    172|         expect(result.content[0].text).toContain('Mode: PLAN');
       |                                        ^
    173|     });
    174| });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[6/6]ΓÄ»


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m6 failed[39m[22m[90m (6)[39m
[2m   Start at [22m 20:31:07
[2m   Duration [22m 1.22s[2m (transform 169ms, setup 0ms, import 784ms, tests 29ms, environment 0ms)[22m

